@@ -1,6 +1,9 @@
 update-manager (1:0.63) gutsy; urgency=low
 
   * fix i18n issue (Fixes LP:#114207)
+  * DistUpgrade/DistUpgradeCache.py:
+    - if "386" (UP) kernel is installed on SMP machine, automatically 
+      switch to SMP kernel (Fixes LP: #106387)
 
  --
 
